--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
     - run: docker run --detach --publish 8080:80 nginx
     - uses: ./.github/workflows/workflow-level-service/expose
       with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         service-identifier: ${{ env.test-service-identifier }}
 
   test-consumer:
@@ -25,6 +26,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./.github/workflows/workflow-level-service/connect
       with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         service-identifier: ${{ env.test-service-identifier }}
     - run: echo "Testing service"
     - run: sleep 30s
