--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -29,8 +29,20 @@ runs:
         key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
     - shell: bash
       run: pnpm install
+    - uses: actions/github-script@v7
+      env:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        script: |
+        core.exportVariable('ACTIONS_CACHE_URL', process.env['ACTIONS_CACHE_URL'])
+        core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env['ACTIONS_RUNTIME_TOKEN'])
+        core.exportVariable('ACTIONS_RUNTIME_URL', process.env['ACTIONS_RUNTIME_URL'])
+    - shell: bash
+      run: |
+        echo "ACTIONS_CACHE_URL: $ACTIONS_CACHE_URL"
+        echo "ACTIONS_RUNTIME_TOKEN: $ACTIONS_RUNTIME_TOKEN"
+        echo "ACTIONS_RUNTIME_URL: $ACTIONS_RUNTIME_URL"
     - shell: bash
       run: node .github/workflows/workflow-level-service/expose/expose.js
       env:
         SERVICE_IDENTIFIER: ${{ inputs.service-identifier }}
-        ACTIONS_RUNTIME_TOKEN: ${{ env.ACTIONS_RUNTIME_TOKEN }}
