--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: ./.github/workflows/workflow-level-service/expose
       with:
         service-identifier: ${{ env.test-service-identifier }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   test-consumer:
     runs-on: ubuntu-latest
