--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -9,6 +9,9 @@ inputs:
     description: "Node.js version"
     required: true
     default: "18.x"
+  GITHUB_TOKEN:
+    description: "GitHub token"
+    required: true
 
 runs:
   using: "composite"
@@ -31,7 +34,7 @@ runs:
       run: pnpm install
     - uses: actions/github-script@v7
       env:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ inputs.GITHUB_TOKEN }}
       with:
         script: |
         core.exportVariable('ACTIONS_CACHE_URL', process.env['ACTIONS_CACHE_URL'])
