--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -38,13 +38,15 @@ runs:
       with:
         script: |
           core.exportVariable('ACTIONS_CACHE_URL', process.env['ACTIONS_CACHE_URL'])
-          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env['ACTIONS_RUNTIME_TOKEN'])
           core.exportVariable('ACTIONS_RUNTIME_URL', process.env['ACTIONS_RUNTIME_URL'])
+          core.exportVariable('ACTIONS_RESULTS_URL ', process.env['ACTIONS_RESULTS_URL'])
+          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env['ACTIONS_RUNTIME_TOKEN'])
     - shell: bash
       run: |
         echo "ACTIONS_CACHE_URL: $ACTIONS_CACHE_URL"
         echo "ACTIONS_RUNTIME_TOKEN: $ACTIONS_RUNTIME_TOKEN"
         echo "ACTIONS_RUNTIME_URL: $ACTIONS_RUNTIME_URL"
+        echo "ACTIONS_RESULTS_URL: $ACTIONS_RESULTS_URL"
     - shell: bash
       run: node .github/workflows/workflow-level-service/expose/expose.js
       env:
