--- a/.github/workflows/workflow-level-service/connect/action.yml
+++ b/.github/workflows/workflow-level-service/connect/action.yml
@@ -29,6 +29,15 @@ runs:
         key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
     - shell: bash
       run: pnpm install
+    - uses: actions/github-script@v7
+      env:
+        github-token: ${{ inputs.GITHUB_TOKEN }}
+      with:
+        script: |
+          core.exportVariable('ACTIONS_CACHE_URL', process.env['ACTIONS_CACHE_URL'])
+          core.exportVariable('ACTIONS_RUNTIME_URL', process.env['ACTIONS_RUNTIME_URL'])
+          core.exportVariable('ACTIONS_RESULTS_URL', process.env['ACTIONS_RESULTS_URL'])
+          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env['ACTIONS_RUNTIME_TOKEN'])
     - shell: bash
       run: node .github/workflows/workflow-level-service/connect/connect.js
       env:
