--- a/.github/workflows/workflow-level-service/stop/action.yml
+++ b/.github/workflows/workflow-level-service/stop/action.yml
@@ -11,7 +11,7 @@ runs:
   steps:
     - uses: actions/upload-artifact@v4
       with:
-        name: ${{ input.service-identifier }}_stop
-        path: ${{ input.service-identifier }}_stop
+        name: ${{ inputs.service-identifier }}_stop
+        path: ${{ inputs.service-identifier }}_stop
         retention-days: 1
         if-no-files-found: ignore
