--- a/.github/workflows/workflow-level-service/stop/action.yml
+++ b/.github/workflows/workflow-level-service/stop/action.yml
@@ -9,6 +9,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - shell: bash
+      run: |
+        echo " " > ${{ inputs.service-identifier }}_stop
     - uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.service-identifier }}_stop
