--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -32,7 +32,7 @@ runs:
       uses: actions/cache/restore@v4
       with:
         path: ${{ env.STORE_PATH }}
-        key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
+        restore-keys: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
 
     - name: "Install dependencies with pnpm"
       shell: bash
