--- a/.github/workflows/workflow-level-service/connect/action.yml
+++ b/.github/workflows/workflow-level-service/connect/action.yml
@@ -30,9 +30,8 @@ runs:
       uses: actions/cache/restore@v4
       with:
         path: ${{ env.STORE_PATH }}
+        restore-keys: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
         key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
 
     - name: "Install dependencies with pnpm"
       shell: bash
