--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -30,7 +30,7 @@ runs:
 
     - name: "Restore pnpm store"
       id: test
-      uses: actions/cache/restore@v4
+      uses: actions/cache/restore@v3.3.3
       with:
         path: ${{ env.STORE_PATH }}
         restore-keys: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
@@ -38,8 +38,8 @@ runs:
 
     - shell: bash
       run: |
-        echo ${{ steps.test.outputs.cache-hit }}
-        echo ${{ steps.test.outputs.cache-matched-key}}
+        echo "${{ steps.test.outputs.cache-hit }}"
+        echo "${{ steps.test.outputs.cache-matched-key}}"
 
     - name: "Install dependencies with pnpm"
       shell: bash
