--- a/.github/workflows/workflow-level-service/connect/action.yml
+++ b/.github/workflows/workflow-level-service/connect/action.yml
@@ -27,10 +27,10 @@ runs:
         echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
     - name: "Restore pnpm store"
-      uses: actions/cache/restore@v3
+      uses: actions/cache/restore@v4
       with:
         path: ${{ env.STORE_PATH }}
-        restore-keys: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-
+        restore-keys: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store
         key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
 
     - name: "Install dependencies with pnpm"
