--- a/.github/workflows/workflow-level-service/expose/action.yml
+++ b/.github/workflows/workflow-level-service/expose/action.yml
@@ -33,8 +33,8 @@ runs:
       uses: actions/cache/restore@v4
       with:
         path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store
         restore-keys: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store
-        key: ${{ runner.os }}-node${{ inputs.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
 
     - shell: bash
       run: |
