--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
     - uses: actions/cache/restore@v3
       with:
         path: /tmp
-        key: Linux-node18.x-pnpm-store-
+        key: Linux-node18.x-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: Linux-node18.x-pnpm-store-
 
     - run: docker run --detach --publish 8080:80 nginx
     - uses: ./.github/workflows/workflow-level-service/expose
