--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,9 @@ on:
     branches: [ "main" ]
 
 env:
-  test-service-identifier: "test-service01"
+  ssh-docker-engine-service-identifier: "ssh-docker-engine-service"
+  http-docker-engine-service-identifier: "http-docker-engine-service"
+  https-docker-engine-service-identifier: "https-docker-engine-service"
 
 jobs:
   update-pnpm-cache:
@@ -34,9 +36,8 @@ jobs:
     - uses: actions/cache@v4
       with:
         path: ${{ env.STORE_PATH }}
+        restore-keys: ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
         key: ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-            ${{ runner.os }}-node${{ matrix.node-version }}-pnpm-store-
     - run: python3 -m pip install setuptools
     - run: pnpm install
 
@@ -108,15 +109,67 @@ jobs:
         file: test/data/agent-${{ matrix.dockerfile }}.dockerfile
         platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
-  test-service:
-    needs: [update-pnpm-cache]
+  ssh-docker-engine-service:
+    needs: [update-pnpm-cache, docker-build]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - run: docker run --detach --publish 8080:80 nginx
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: ssh-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/http-dind
+    - run: docker load --input /tmp/ssh-dind-docker-image.tar
+    - run: docker image ls -a
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
     - uses: ./.github/workflows/workflow-level-service/expose
       with:
-        service-identifier: ${{ env.test-service-identifier }}
+        service-identifier: ${{ env.ssh-docker-engine-service-identifier }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  http-docker-engine-service:
+    needs: [update-pnpm-cache, docker-build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: http-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/http-dind
+    - run: docker load --input /tmp/http-dind-docker-image.tar
+    - run: docker image ls -a
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
+    - uses: ./.github/workflows/workflow-level-service/expose
+      with:
+        service-identifier: ${{ env.http-docker-engine-service-identifier }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  https-docker-engine-service:
+    needs: [update-pnpm-cache, docker-build]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/download-artifact@v4
+      with:
+        path: /tmp
+        name: https-dind-docker-image
+    - uses: docker/metadata-action@v5
+      id: meta
+      with:
+        images: ghcr.io/${{ github.repository }}/http-dind
+    - run: docker load --input /tmp/https-dind-docker-image.tar
+    - run: docker image ls -a
+    - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
+    - uses: ./.github/workflows/workflow-level-service/expose
+      with:
+        service-identifier: ${{ env.https-docker-engine-service-identifier }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   test-consumer:
@@ -126,68 +179,24 @@ jobs:
     - uses: actions/checkout@v4
     - uses: ./.github/workflows/workflow-level-service/connect
       with:
-        service-identifier: ${{ env.test-service-identifier }}
+        service-identifier: ${{ env.ssh-docker-engine-service-identifier }}
     - run: echo "Testing service"
     - run: sleep 30s
 
-  stop-test-service:
+  stop-services:
     runs-on: ubuntu-latest
     needs: [test-consumer]
     steps:
     - uses: actions/checkout@v4
     - uses: ./.github/workflows/workflow-level-service/stop
       with:
-        service-identifier: ${{ env.test-service-identifier }}
-
-#   ssh-docker-service:
-#     runs-on: ubuntu-latest
-#     needs: [docker-build]
-#     steps:
-#     - uses: actions/checkout@v4
-#     - uses: actions/setup-node@v4
-#       with:
-#         node-version: 18
-#     - uses: pnpm/action-setup@v2
-#       with:
-#         version: 8
-#         run_install: false
-#     - name: Get pnpm store directory
-#       shell: bash
-#       run: |
-#         echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-#     - uses: actions/cache/restore@v3
-#       with:
-#         path: ${{ env.STORE_PATH }}
-#         key: ${{ runner.os }}-node18-pnpm-store-
-#     - run: pnpm install
-#     - uses: actions/download-artifact@v4
-#       with:
-#         path: /tmp
-#         name: ssh-dind-docker-image
-#     - uses: docker/metadata-action@v5
-#       id: meta
-#       with:
-#         images: ghcr.io/${{ github.repository }}/ssh-dind
-#     - run: docker load --input /tmp/ssh-dind-docker-image.tar
-#     - run: docker image ls -a
-#     - uses: tailscale/github-action@v2
-#       with:
-#         tags: tag:tme-ci
-#         version: 1.58.2
-#         oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-#         oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-#     - run: echo "$(tailscale ip -4)" >> /tmp/connection-string
-#     - uses: actions/upload-artifact@v4
-#       with:
-#         path: /tmp/connection-string
-#         name: ssh-docker-service-connection-string
-#         if-no-files-found: error
-#     - run: docker run --rm --privileged --detach --ulimit nproc=-1 --ulimit core=-1 --pids-limit -1 --oom-score-adj -500 ${{ steps.meta.outputs.tags }}
-#     - run: node test/ci-wait-for-artifacts.js
-#       env:
-#         GITHUB_ARTIFACT_COUNT: 9
-#         GITHUB_RUN_ID: ${{ github.run_id }}
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        service-identifier: ${{ env.ssh-docker-engine-service-identifier }}
+    - uses: ./.github/workflows/workflow-level-service/stop
+      with:
+        service-identifier: ${{ env.http-docker-engine-service-identifier }}
+    - uses: ./.github/workflows/workflow-level-service/stop
+      with:
+        service-identifier: ${{ env.https-docker-engine-service-identifier }}
 
 #   http-docker-service:
 #     runs-on: ubuntu-latest
