--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -273,6 +273,16 @@ jobs:
     - if: ${{ runner.os == 'macOS' }}
       run: sleep 10
 
+  # https://github.com/orgs/community/discussions/26822
+  pr-can-merge:
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: [local-podman-desktop-tests, local-docker-desktop-tests]
+    steps:
+      - run: exit 1
+        if: >-
+          ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') || contains(needs.*.result, 'skipped') }}
+
   publish-pre-release:
     runs-on: ubuntu-latest
     if: ${{ github.ref != 'refs/heads/main'}}
