--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "devDependencies": {
         "@actions/artifact": "2.1.1",
         "@actions/core": "1.10.1",
-        "@actions/exec": "1.1.1",
         "@effect/cli": "0.31.7",
         "@effect/experimental": "0.8.6",
         "@effect/platform": "0.43.7",
@@ -41,8 +40,6 @@
         "@effect/printer-ansi": "0.31.12",
         "@effect/schema": "0.61.5",
         "@effect/typeclass": "0.22.12",
-        "@protobuf-ts/runtime": "2.9.3",
-        "@protobuf-ts/runtime-rpc": "^2.9.3",
         "@rushstack/eslint-config": "3.6.2",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
@@ -80,5 +77,11 @@
     },
     "engines": {
         "node": ">=16"
+    },
+    "pnpm": {
+        "patchedDependencies": {
+            "@rushstack/heft-jest-plugin@0.11.3": "patches/@rushstack__heft-jest-plugin@0.11.3.patch",
+            "@rushstack/heft@0.64.3": "patches/@rushstack__heft@0.64.3.patch"
+        }
     }
 }
