--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "@effect/printer-ansi": "0.31.12",
         "@effect/schema": "0.61.5",
         "@effect/typeclass": "0.22.12",
+        "@protobuf-ts/runtime": "^2.9.3",
+        "@protobuf-ts/runtime-rpc": "^2.9.3",
         "@rushstack/eslint-config": "3.6.3",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
