--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
         "@effect/printer-ansi": "0.31.12",
         "@effect/schema": "0.61.5",
         "@effect/typeclass": "0.22.12",
-        "@protobuf-ts/runtime": "^2.9.3",
-        "@protobuf-ts/runtime-rpc": "^2.9.3",
+        "@protobuf-ts/runtime": "2.9.3",
+        "@protobuf-ts/runtime-rpc": "2.9.3",
         "@rushstack/eslint-config": "3.6.3",
         "@rushstack/heft": "0.64.3",
         "@rushstack/heft-jest-plugin": "0.11.3",
@@ -64,7 +64,7 @@
         "prettier": "3.2.4",
         "prettier-plugin-jsdoc": "1.3.0",
         "prettier-plugin-packagejson": "2.4.10",
-        "stun": "^2.1.0",
+        "stun": "2.1.0",
         "tar-fs": "3.0.4",
         "typescript": "5.3.3",
         "uuid": "9.0.1",
